[gd_scene load_steps=23 format=3 uid="uid://pxlkk2ibbhjn"]

[ext_resource type="Script" path="res://Scripts/PuzzleBoxManager.gd" id="1_f23ct"]
[ext_resource type="Environment" uid="uid://82pkj8xcmkbi" path="res://Scenes/default_environment.tres" id="1_vn4ad"]
[ext_resource type="LabelSettings" uid="uid://djp8mmrg5wn8t" path="res://UI/label_title.tres" id="2_08hyc"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="2_ogw50"]
[ext_resource type="SystemFont" uid="uid://clq0ndivqebeu" path="res://UI/default_font.tres" id="3_ux0cb"]
[ext_resource type="PackedScene" uid="uid://eeyjhjgpr0vp" path="res://Prefabs/camera.tscn" id="6_axqi4"]
[ext_resource type="PackedScene" uid="uid://bmn7sigy1e62n" path="res://Scenes/Puzzles/level_01.tscn" id="6_whw5q"]
[ext_resource type="AudioStream" uid="uid://bev55lvfp8uew" path="res://Audio/636628__eponn__melodic-rock-slide-fx-1.wav" id="7_6eoo4"]
[ext_resource type="PackedScene" uid="uid://jymbeaxwh1tx" path="res://Scenes/Puzzles/level_02.tscn" id="7_jcm8p"]
[ext_resource type="AudioStream" uid="uid://df8fm5jc5x2tc" path="res://Audio/636627__eponn__melodic-rock-slide-fx-2.wav" id="8_bu6rj"]
[ext_resource type="AudioStream" uid="uid://boxsb0h4dvty1" path="res://Audio/636626__eponn__melodic-rock-slide-fx-3.wav" id="9_s0h6q"]
[ext_resource type="AudioStream" uid="uid://bglvsoaquwhor" path="res://Audio/95000__j1987__cinderblockmove.wav" id="10_rku41"]
[ext_resource type="AudioStream" uid="uid://d4jayb20kbpk3" path="res://Audio/95001__j1987__cinderblockmove2.wav" id="11_j255i"]
[ext_resource type="AudioStream" uid="uid://c7abvfmi218w5" path="res://Audio/185849__lloydevans09__warping.wav" id="12_1q1qo"]
[ext_resource type="AudioStream" uid="uid://nqvnor8u7yw" path="res://Audio/321723__rhodesmas__deep-space-vibrations-ambience-loop.ogg" id="13_gi0n4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4xnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vboyp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwrqo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsw0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrx78"]

[sub_resource type="BoxMesh" id="BoxMesh_3h22o"]
size = Vector3(1.11, 1.11, 1.11)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1aje6"]
emission = Color(1, 1, 1, 1)

[node name="puzzle_box_test" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_vn4ad")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("2_ogw50")
inactive_color = Color(0.5, 0.5, 0.5, 1)

[node name="Label_LevelText" type="Label" parent="UI/HUD"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
pivot_offset = Vector2(200, 20)
text = "level ???"
label_settings = ExtResource("2_08hyc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_CompleteText" type="Label" parent="UI/HUD"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 0
offset_left = 440.0
offset_top = 630.0
offset_right = 840.0
offset_bottom = 670.0
pivot_offset = Vector2(200, 20)
text = "level complete!"
label_settings = ExtResource("2_08hyc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Left" type="Button" parent="UI/HUD"]
custom_minimum_size = Vector2(40, 65)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -35.0
offset_right = -450.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 35)
theme_override_colors/font_hover_color = Color(0.75, 0.75, 0.75, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ux0cb")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_n4xnl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vboyp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mwrqo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lsw0j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qrx78")
text = "<"
icon_alignment = 1

[node name="Button_Right" type="Button" parent="UI/HUD"]
custom_minimum_size = Vector2(40, 65)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 450.0
offset_top = -32.5
offset_right = 490.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 35)
theme_override_colors/font_hover_color = Color(0.75, 0.75, 0.75, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ux0cb")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_n4xnl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vboyp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mwrqo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lsw0j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qrx78")
text = ">"
icon_alignment = 1

[node name="Level_Indicators" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 85.0
grow_horizontal = 2
pivot_offset = Vector2(640, 5)
theme_override_constants/separation = 7
alignment = 1

[node name="Indicator" type="ColorRect" parent="UI/HUD/Level_Indicators"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = 635.0
offset_right = 645.0
offset_bottom = 10.0

[node name="PuzzleBoxManager" type="Node3D" parent="."]
script = ExtResource("1_f23ct")
puzzles = [ExtResource("6_whw5q"), ExtResource("7_jcm8p")]
transition_sounds = [ExtResource("7_6eoo4"), ExtResource("8_bu6rj"), ExtResource("9_s0h6q")]
rotate_sounds = [ExtResource("10_rku41"), ExtResource("11_j255i")]
cube_sounds = [ExtResource("12_1q1qo")]

[node name="Camera" parent="PuzzleBoxManager" instance=ExtResource("6_axqi4")]

[node name="TransitionCube" type="MeshInstance3D" parent="PuzzleBoxManager"]
visible = false
mesh = SubResource("BoxMesh_3h22o")
surface_material_override/0 = SubResource("StandardMaterial3D_1aje6")

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gi0n4")
volume_db = -10.0
autoplay = true

[connection signal="change_level" from="UI/HUD" to="PuzzleBoxManager" method="_on_hud_change_level"]
[connection signal="button_up" from="UI/HUD/Button_Left" to="UI/HUD" method="_on_button_select_left_button_up"]
[connection signal="button_up" from="UI/HUD/Button_Right" to="UI/HUD" method="_on_button_select_right_button_up"]
[connection signal="initialize_levels" from="PuzzleBoxManager" to="UI/HUD" method="_on_puzzle_box_manager_initialize_levels"]
[connection signal="new_level" from="PuzzleBoxManager" to="UI/HUD" method="_on_puzzle_box_manager_new_level"]
[connection signal="pause" from="PuzzleBoxManager" to="UI/HUD" method="_on_puzzle_box_manager_pause"]
[connection signal="pause" from="PuzzleBoxManager" to="PuzzleBoxManager/Camera" method="_on_puzzle_box_manager_pause"]
[connection signal="camera_moved" from="PuzzleBoxManager/Camera" to="UI/HUD" method="_on_camera_camera_moved"]
[connection signal="camera_moved" from="PuzzleBoxManager/Camera" to="PuzzleBoxManager" method="_on_camera_camera_moved"]
